# uiucprescon.images

./: .gitignore  .pylintrc  Jenkinsfile  LICENSE  MANIFEST.in  Pipfile  README.rst  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sonar-project.properties  tox.ini
ci/docker/python/linux/: Dockerfile
ci/docker/python/linux/jenkins/: Dockerfile
ci/docker/python/linux/tox/: Dockerfile  apt-packages.txt
ci/docker/python/windows/tox/: Dockerfile
ci/docker/python/windows/tox/chocolatey/: packages.config
ci/docker/shared/: requirements-ci.txt
ci/jenkins/: plugins.txt
ci/jenkins/scripts/: devpi.groovy  packaging.groovy  tox.groovy
docs/: conf.py  formats.rst  index.rst  install.rst  uiucprescon.imageprocess.rst  uiucprescon.images.rst
requirements/: requirements-ci-freeze.txt  requirements-ci.txt  requirements-dev-freeze.txt  requirements-dev.in  requirements-dev.txt  requirements-extra.txt  requirements.txt  requirements_tox.txt
src/uiucprescon/images/: convert.py  formats.py
tests/: test_imageprocess.py
uiucprescon/imageprocess/: __init__.py  convert.py  formats.py
uiucprescon/images/: __init__.py  convert.py  formats.py  utils.py
vars/: runJenkinsPipeline.groovy
