[metadata]
name = uiucprescon.images
version = 0.0.2b2
url = http://www.library.illinois.edu/dccdocs/uiucprescon.imageprocess
download_url = https://github.com/UIUCLibrary/imageprocess
author = University Library at The University of Illinois at Urbana Champaign: Preservation Services
author_email = prescons@library.illinois.edu
description = Uses the Get Bib Record Web Service to get marc data from the UIUC Voyager Library Catalog
long_description = file: README.rst
license = University of Illinois/NCSA Open Source License
license_file = LICENSE
maintainer = Henry Borchers
maintainer_email = hborcher@illinois.edu
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules


[tool:pytest]
testpaths = tests
addopts = --verbose -s

[aliases]
test=pytest

[build_sphinx]
source-dir = docs
build-dir  = build/docs
config-dir = docs
all_files  = 1
