[metadata]
name = uiucprescon.images
version = 0.0.5.dev0
url = http://www.library.illinois.edu/dccdocs/uiucprescon.images
download_url = https://github.com/UIUCLibrary/uiucprescon.images
author = University Library at The University of Illinois at Urbana Champaign: Preservation Services
author_email = prescons@library.illinois.edu
description = Process image files
long_description = file: README.rst
license = University of Illinois/NCSA Open Source License
license_file = LICENSE
maintainer = Henry Borchers
maintainer_email = hborcher@illinois.edu
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules


[tool:pytest]
testpaths = tests
addopts = --verbose -s
junit_family=xunit1

[aliases]
test=pytest

[build_sphinx]
source_dir = docs
build_dir  = build/docs
config_dir = docs
all_files  = 1

[coverage:run]
source = .

[coverage:report]
include = uiucprescon/images/*